Fixed Document Viewer Horizontal Scroll

--- a/src/app/components/document-viewer/document-viewer.component.scss
+++ b/src/app/components/document-viewer/document-viewer.component.scss
@@ -69,7 +69,6 @@
 
     .document-viewer-list-item {
         display: inline-block;
-        width: 100% ;
         padding-left: 15px;
         padding-right: 15px;
     }
