--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -121,7 +121,7 @@ h3 {
 
     position: absolute;
     bottom: 0;
-    top: 64px;
+    top: 58px;
     right: 3px;
     left: 3px;
 
